# stm_ws

./: .gitmodules  CMakeLists.txt  arm-gcc-toolchain.cmake  stm32f103.cfg  stm32f103.ioc  stm32f103.launch
Core/Inc/: FreeRTOSConfig.h  main.h
Core/Src/: app_main.cpp  main.c  stm32f1xx_it.c
app/: app_main.cpp
